<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="loginViewModel"
            type="com.example.festivalwatch.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment"
        android:background="@drawable/template2"
        app:passwordToggleEnabled="true">

        <TextView
            android:id="@+id/login_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="260dp"
            android:text="@string/login_string"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_login_id"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/description_string"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="@+id/login_view_id"
            app:layout_constraintTop_toBottomOf="@+id/login_view_id" />


        <EditText
            android:id="@+id/email_login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="187dp"
            android:ems="10"
            android:text="@={loginViewModel.username}"
            android:hint="@string/usernameString"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/description_login_id"
            app:layout_constraintTop_toBottomOf="@+id/description_login_id" />

        <EditText
            android:id="@+id/password_login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={loginViewModel.password}"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="187dp"
            android:ems="10"
            android:hint="@string/passwordString"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_login_id"
            app:layout_constraintTop_toBottomOf="@+id/email_login_id"
            app:passwordToggleEnabled="true" />

        <Button
            android:id="@+id/login_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="309dp"
            app:backgroundTint="@color/color2"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:onClick="@{() -> loginViewModel.onLogin()}"
            app:layout_constraintStart_toStartOf="@+id/password_login_id"
            app:layout_constraintTop_toBottomOf="@+id/password_login_id" />

        <TextView
            android:id="@+id/description_newUser_id"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/createAccountString"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/login_button_id"
            app:layout_constraintTop_toBottomOf="@+id/login_button_id" />

        <Button
            android:id="@+id/signUp_button_id"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:onClick="@{() -> loginViewModel.navigateToRegister()}"
            android:rotationX="0"
            android:text="@string/signUptString"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/description_newUser_id"
            app:layout_constraintTop_toBottomOf="@+id/login_button_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
