<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="registerViewModel"
            type="com.example.festivalwatch.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.RegisterFragment"
        android:background="@drawable/template2">


        <TextView
            android:id="@+id/register_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="200dp"
            android:text="@string/register_string"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.769"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_register_id"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description_register_string"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.259"
            app:layout_constraintStart_toStartOf="@+id/register_view_id"
            app:layout_constraintTop_toBottomOf="@+id/register_view_id" />

        <EditText
            android:id="@+id/email_register_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="187dp"
            android:ems="10"
            android:hint="@string/emailString"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:text="@={registerViewModel.email}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/description_register_id"
            app:layout_constraintTop_toBottomOf="@+id/description_register_id" />

        <EditText
            android:id="@+id/name_register_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="188dp"
            android:ems="10"
            android:hint="@string/nameString"
            android:text="@={registerViewModel.username}"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_register_id"
            app:layout_constraintTop_toBottomOf="@+id/email_register_id" />

        <EditText
            android:id="@+id/password_register_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="188dp"
            android:ems="10"
            android:hint="@string/passwordString"
            android:inputType="textPassword"
            android:text="@={registerViewModel.password}"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/name_register_id"
            app:layout_constraintTop_toBottomOf="@+id/name_register_id"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/phone_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="187dp"
            android:ems="10"
            android:hint="@string/phoneString"
            android:text="@={registerViewModel.phone}"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password_register_id"
            app:layout_constraintTop_toBottomOf="@+id/password_register_id" />

        <EditText
            android:id="@+id/country_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="187dp"
            android:ems="10"
            android:hint="@string/locationString"
            android:minHeight="48dp"
            android:text="@={registerViewModel.country}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/phone_id"
            app:layout_constraintTop_toBottomOf="@+id/phone_id" />

        <Button
            android:id="@+id/register_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="300dp"
            android:background="@drawable/button_rounded_corners"
            android:onClick="@{() -> registerViewModel.onRegister()}"
            android:text="@string/register_string"
            android:textColor="@color/white"
            app:backgroundTint="@color/color2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/country_id"
            app:layout_constraintTop_toBottomOf="@+id/country_id" />

        <TextView
            android:id="@+id/description_alreadyUser_id"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="90dp"
            android:gravity="center"
            android:text="@string/alreadyRegisteredString"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/register_button_id"
            app:layout_constraintTop_toBottomOf="@+id/register_button_id" />

        <Button
            android:id="@+id/loginHere_button_id"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="90dp"
            android:background="@android:color/transparent"
            android:onClick="@{() -> registerViewModel.navigateToLogin()}"
            android:text="@string/loginHereString"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/description_alreadyUser_id"
            app:layout_constraintTop_toBottomOf="@+id/register_button_id" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>