<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >


    <data>
        <variable
            name="homeViewModel"
            type="com.example.festivalwatch.home.HomeViewModel" />
        <variable
            name="homeFragment"
            type="com.example.festivalwatch.home.HomeFragment" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment"
        android:background="@drawable/template2">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/festival"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/festivalCard_view_id"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="129dp"
            android:backgroundTint="@color/color2"
            android:clickable="true"
            android:contentDescription="@string/profileMenuString"
            android:onClick="@{() -> homeViewModel.navigateToFestivals()}"
            android:padding="3dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="51dp"
                    android:layout_height="48dp"
                    android:background="@drawable/cercleshape"
                    android:backgroundTint="@color/purple_200"
                    android:padding="10dp"
                    android:src="@drawable/ic_festival" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/festivalString"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#E8E8E8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/chooseFestivalString"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profileCard_view_id"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:layout_marginTop="93dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="129dp"
            android:backgroundTint="@color/color2"
            android:clickable="true"
            android:contentDescription="@string/chooseFestivalString"
            android:onClick="@{() -> homeViewModel.navigateToProfile()}"
            android:padding="3dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="51dp"
                    android:layout_height="48dp"
                    android:background="@drawable/cercleshape"
                    android:backgroundTint="@color/purple_500"
                    android:padding="10dp"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/profileString"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#E8E8E8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/profileMenuString"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/darkpink"
            android:clickable="true"
            android:onClick="@{() -> homeFragment.festivalEdit()}"
            android:visibility="@{homeViewModel._isAdmin.equals(`true`) ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/cercleshape"
                    android:backgroundTint="@color/byzantium"
                    android:padding="10dp"
                    android:src="@drawable/ic_festival" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#E8E8E8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Let's create a festival!"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/byzantium2"
            android:clickable="true"
            android:visibility="@{homeViewModel._isAdmin.equals(`true`) ? View.VISIBLE : View.INVISIBLE}"
            android:onClick="@{() -> homeFragment.addOrganizer()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/cercleshape"
                    android:backgroundTint="@color/blue2"
                    android:padding="10dp"
                    android:src="@drawable/ic_person_add" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#E8E8E8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Let's add an organizer!"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>